# thingy53

./: thingy53_Info.txt
01_alive_counter_uart/src/: main.c
05_bme688/: CMakeLists.txt  prj.conf
05_bme688/output/: serial-terminal-2024-07-12T16:49:21.645Z.txt
06_bme688_parallel/: CMakeLists.txt  Kconfig  prj.conf
06_bme688_parallel/output/: serial-terminal-2024-07-12T19:35:13.261Z.txt
08_bme688_bsec2/: CMakeLists.txt  Kconfig
09_bh1749/: CMakeLists.txt  Kconfig
09_bh1749/output/: serial-terminal-2024-07-21T04:43:40.008Z.txt
09_bh1749/src/: main.c
11_openthread_shell/: prj.conf
12_ot_udp_client/: CMakeLists.txt
20_sensors_server/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
20_sensors_server/subsys/bme688_server/bsec2/: bsec2.cpp
BH1749_light_sensor/: prj.conf
BH1749_light_sensor/boards/: thingy53_nrf5340_cpuapp.overlay
BH1749_light_sensor/src/: main.c
BME688_environmental/: CMakeLists.txt  prj.conf
BME688_environmental/boards/: thingy53_nrf5340_cpuapp_ns.overlay
BME688_environmental/src/: main.c
Dissertation/: main.tex
Dissertation/00_frontmatter/: abstract.tex  acknowledgement.tex  declaration.tex  dedication.tex  glossary.tex
bme688_bh1749/: Kconfig  prj.conf  sample.yaml
bme688_bh1749/drivers/bh1749/: bh1749.h  bh1749_trigger.c
bme688_bh1749/output/: serial-terminal-2024-07-24T07-45-55.754Z.txt  serial-terminal-2024-07-28T16:35:44.623Z.txt
bme688_bh1749/src/: main.c
egg_hatch/: CMakeLists.txt  main_no_http  prj.conf  sample.yaml
egg_hatch/ml/: egg_hatch_prototype.ipynb
egg_hatch/ml/dataset/: hatcher_data.csv  sensor_data_setter.csv  setter_data.csv
egg_hatch/ml/output/: sensor_data_setter_output_svm_20240819194642_74.csv
egg_hatch/output/: serial-terminal-2024-07-24T08:20:52.391Z.txt
egg_hatch/src/: main.c
usb_http_server/: CMakeLists.txt  Kconfig  prj.conf
usb_http_server/src/: main.c
usb_network_interface/: CMakeLists.txt  prj.conf
usb_network_interface/output/: serial-terminal-2024-08-19T11:00:53.573Z.txt
usb_network_interface/src/: main.c
